[gd_scene load_steps=7 format=3 uid="uid://ds4ntwqvgk5uk"]

[ext_resource type="Script" path="res://cock.gd" id="1_7yamk"]
[ext_resource type="Texture2D" uid="uid://bjngnhggmsp1d" path="res://Cockroach enemy/cockroach.png" id="1_qnhbs"]
[ext_resource type="AudioStream" uid="uid://dm0a8ncatv5fb" path="res://Music and Sounds/EnemyDie.wav" id="3_pcgoh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wyw0"]
size = Vector2(69, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2b5r"]
size = Vector2(102.5, 52.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_bmo04"]
radius = 172.5

[node name="cock" type="CharacterBody2D"]
scale = Vector2(0.4, 0.4)
script = ExtResource("1_7yamk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_qnhbs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_2wyw0")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1.25001, -1.25)
shape = SubResource("RectangleShape2D_v2b5r")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_bmo04")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pcgoh")
volume_db = -11.568

[node name="enemybar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -32.5
offset_top = 15.0
offset_right = 400.5
offset_bottom = 42.0
scale = Vector2(0.15, 0.15)
show_percentage = false

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
